# simd-puzzles

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
bench/: base64.sh  multiplot.R  scale.sh  singleplot.R  sum.sh
cmake/: project_settings.cmake
doc/base64/: base64.md
doc/scale/: scale.md
doc/sum/: sum.md
docker/: Dockerfile.debian-buster  Dockerfile.opensuse-15.1  Dockerfile.ubuntu-20.04
src/: CMakeLists.txt
src/base64/: CMakeLists.txt  main.cpp
src/libbenchmark/: CMakeLists.txt  result.cpp  result.hpp  testrun.cpp  testrun.hpp  testsuite.cpp  testsuite.hpp
src/libsimd/: CMakeLists.txt
src/libsimd/algorithms/base64/: naive.cpp  naive.hpp
src/libsimd/algorithms/base64/avx2/: shuffle.cpp  shuffle.hpp
src/libsimd/algorithms/scale/: naive.cpp  naive.hpp
src/libsimd/algorithms/scale/avx2/: fma.cpp  fma.hpp
src/libsimd/algorithms/sum/: naive.cpp  naive.hpp
src/libsimd/algorithms/sum/avx2/: add.cpp  add.hpp  hadd.cpp  hadd.hpp  sad.cpp  sad.hpp
src/libsimd/utils/: to_string.cpp  to_string.hpp
src/scale/: CMakeLists.txt  main.cpp
src/sum/: CMakeLists.txt  main.cpp  multiplot.R  singleplot.R
test/: CMakeLists.txt  base64.cpp  scale.cpp  sum.cpp
